# Auto-Git

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  ui.rs
tool-install/: uninstall.bat  update.bat
